# MG400_ROS

./: .changelog  README-CN.md  README-EN.md  README.md
bringup/: CMakeLists.txt
bringup/alarmFile/: alarm_servo.json
bringup/include/bringup/: commander.h  convert.h  robot.h
bringup/launch/: bringup.launch
bringup/src/: RosExample.cpp  main.cpp  robot.cpp  tcp_socket.cpp
bringup/srv/: BrakeControl.srv  GetAngle.srv  Jump.srv  ModbusCreate.srv  RelJointMovJ.srv  ServoJ.srv  ServoP.srv  SetHoldRegs.srv  StopDrag.srv
joint_publish_gui/: CMakeLists.txt  package.xml
joint_publish_gui/src/: main.cpp  main_window.cpp  main_window.h  main_window.ui
mg400_description/: CMakeLists.txt  package.xml
mg400_description/config/: joint_names_mg400_description.yaml
mg400_description/launch/: display.launch
mg400_description/rviz/: urdf.rviz
mg400_description/urdf/: mg400_description.urdf
rosdemo/: CMakeLists.txt  package.xml  rosDemoMG400.cpp  rosDemoMG400.h
rosdemo/alarmFile/: alarm_controller.json
rosdemo/include/: rosDemoMG400.h
rosdemo/src/: main.cpp  rosDemoMG400.cpp
rosdemo/srv/: Arc.srv  Circle.srv  GetCoils.srv  GetErrorID.srv  GetHoldRegs.srv  InverseSolution.srv  JointMovJ.srv  MovJ.srv  MovJIO.srv  MovLIO.srv  PositiveSolution.srv  RelMovJ.srv  RelMovJUser.srv  RelMovLUser.srv
